--- a/a.html
+++ b/a.html
@@ -361,19 +361,12 @@
                     <form id="message-form" class="message-form1">
                         <div class="input-group">
                             <input type="text" id="nickname" class="input1" placeholder="이름을 입력해주세요" required>
-                            <p id="font1">* 편지가 발송되었다는 확인연락과<br>
-                                편지를 받은 사람이 답장 보내기를 <br>원할 때 동의를 구하는 메시지를 보낼 수 있습니다<br>
-                                <label for="terms-checkbox">
-                                    <input type="checkbox" id="terms-checkbox">
-                                    수신거부
-                                </label>
                             </p>
                     </form>
 
                     <form id="message-form" class="message-form2">
                         <p></p><input type="text" id="phone" class="input2" placeholder="전화번호를 입력해주세요" required>
                     </form>
-                    <p id="font1">* 편지 받을 주소를 입력해주세요(상세주소까지) <br>편지를 안받고 싶으신 분들은 주소기입을 안하셔도 됩니다!</p>
                     <form id="message-form" class="message-form3">
                         <input type="text" id="address" class="input3" placeholder="주소를 정확히 입력해주세요" required>
 
@@ -381,9 +374,6 @@
                         <form id="message-form" class="message-form3">
                             <input type="text" id="address" class="input3" placeholder="우편번호" required>
                         </form>
-                        <P id="font1">* 원하시는 편지의 내용과 특정 연령층을 적어주세요
-                            <br>조건의 맞는 편지가 없다면, 랜덤으로 발송됩니다.
-                        </P>
                         <form id="message-form" class="message-form4">
                             <input type="text" id="letter-content" class="input4"
                                 placeholder="원하는 편지의 내용과 특정 연령층을 적어주세요" required>
@@ -409,11 +399,14 @@
                         </p>
 
                         <div class="checkbox-container">
-                            <input type="checkbox" id="terms-checkbox" class="checkbox-input">
-                            <label for="terms-checkbox" class="checkbox-label"> 개인정보 처리 방침과 이용약관에 동의합니다.</label>
+                            <label for="terms-checkbox" class="checkbox-label">
+                                <input type="checkbox" id="terms-checkbox" class="checkbox-input"> 개인정보 처리 방침과 이용약관에 동의합니다.<br>
+                                <input type="checkbox" id="terms-checkbox" class="checkbox-input"> 수신거부(편지 발송여부와 확인을 위한 연락을 받을 수 없습니다.)
+                            </label>
                         </div>
 
                         <button id="toggle-btn"> ↓ 개인정보 처리 방침과 이용약관</button>
+
                         <div id="content" class="hidden">
                             <p>저희는 귀하의 개인정보를 다음과 같은 목적을 위해 수집합니다: 서비스 제공, 이용자 지원, 마케팅 및 광고 활동 등. 수집된 개인정보 중 주소는 편지를 보내기
                                 전까지 보관되며, 편지 발송 후 즉시 폐기됩니다.
@@ -424,6 +417,7 @@
                             <p></p><br> 귀하는 본 서비스를 이용하기 위해서 개인정보 수집 및 이용에 동의합니다. 개인정보는 서비스 제공을 위해 필요한 범위에서만 수집되며, 다른 용도로
                             사용되지 않습니다..</p>
                         </div>
+
                         <button id="button1" disabled> 완료 </button>
                 </div>
 
@@ -433,6 +427,7 @@
                         const content = document.getElementById("content");
                         content.classList.toggle("show");
                     });
+
 
                     // 완료 버튼 활성화/비활성화
                     // 완료 버튼 활성화/비활성화
