--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Diphylleia&family=Dongle&family=Gasoek+One&family=Hahmlet:wght@100..900&family=Poor+Story&display=swap"
         rel="stylesheet">
-        
+
     <style>
         body {
             margin: 0;
@@ -123,7 +123,7 @@
         <button id="textButton" onmouseover="changeText()" onmouseout="resetText()">💌</button>
     </a>
 
-    <p class="blinking-text">💌를 눌러서 익명으로 편지를 보내고,받을 수 있어요!</p>
+    <p class="blinking-text">💌를 눌러서 편지를 보내보세요!</p>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
