--- a/am.html
+++ b/am.html
@@ -234,6 +234,9 @@
             cursor: pointer; /* 마우스 포인터 모양 */
             font-family: 'Diphylleia', sans-serif;
         }
+        #font9{
+            font-size: 21px;
+        }
     </style>
 </head>
 
@@ -244,19 +247,21 @@
         <form id="message-form">
             <!-- 이름 입력 부분 -->
             <div class="input-group">
-                <p id="font">이름</p>
+                <p id="font">이름 (실명)</p>
                 <input type="text" id="nickname" class="input1" placeholder="이름을 입력해주세요" required>
             </div>
 
             <!-- 전화번호 입력 부분 -->
             <div class="input-group">
                 <p id="font">전화번호</p>
+                <p id ='font9'>* 편지 발송확인 연락,편지를 받은 사람이 답장을 원할때 동의구하는 연락,<br>주소확인 연락 등을 보낼 수 있습니다.</p>
                 <input type="text" id="phone" class="input2" placeholder="전화번호를 입력해주세요" required>
             </div>
 
             <!-- 주소 입력 부분 -->
             <div class="input-group">
-                <p id="font">주소</p>
+                <p id="font">편지 받을 주소</p>
+                <p id ='font9'>* 주소는 편지가 보내짐과 동시에 즉시 폐기됩니다.</p>
                 <input type="text" id="address" class="input3" placeholder="주소를 정확히 입력해주세요" required>
             </div>
             <div class="input-group">
