--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
         <button id="textButton" onmouseover="changeText()" onmouseout="resetText()">💌</button>
     </a>
 
-    <p class="blinking-text">💌를 눌러서 편지를 보내보세요!</p>
+    <p class="blinking-text">💌를 눌러서 편지를 보내보세요!<br> 편지는 12월 24일에 도착예정입니다</p>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
