feat: 약관 동의 버튼 오동작 해결

--- a/public/am.html
+++ b/public/am.html
@@ -338,6 +338,13 @@
 </div>
 </body>
 <script>
+
+    // 약관 버튼 클릭 이벤트
+    document.getElementById("toggle-btn").addEventListener("click", function () {
+        const content = document.getElementById("content");
+        content.classList.toggle("show");
+    });
+
     for (let i = 0; i < 200; i++) {
         const snow = document.createElement("div");
         snow.className = "snow";
